tests/invalid_types/even_more_dups.hk
extern fun putchar(n: I32);

extern fun putchar(n: I32);


fun main() I32{
    putchar(12);
    0
}

#[
<fail>
]#
